--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
        <artifactId>slf4j-log4j12</artifactId>
        <version>1.7.5</version>
    </dependency>
+   
+   <dependency>
+    <groupId>com.dropbox.core</groupId>
+    <artifactId>dropbox-core-sdk</artifactId>
+    <version>2.1.1</version>
+   </dependency>
     
   </dependencies>
   
