added documentation & createAppUser method

--- a/src/main/resources/templates/box.properties
+++ b/src/main/resources/templates/box.properties
@@ -2,8 +2,9 @@
 configID=FILLHERE		
 configType=Box
 clientID=FILLHERE
+enterpriseID=FILLHERE
 clientSecret=FILLHERE
-appUserID=FILLHERE
+appUserID=OPTIONAL_FILLED_BY_APPLICATION
 appUserName=FILLHERE
 publicKeyID=FILLHERE
 privateKeyFile=FILLHERE
