dropbox & box integration added + cleaned up code

--- a/src/main/resources/templates/dropbox.properties
+++ b/src/main/resources/templates/dropbox.properties
@@ -5,4 +5,5 @@ appKey=FILLHERE
 appSecret=FILLHERE
 userID=DO_NOT_FILL_MANUALLY
 accessToken=DO_NOT_FILL_MANUALLY
+pollFolder=FILLHERE-LEAVE_BLANK_TO_POLL_ALL_FILES_IN_DROPBOX_ACCOUNT
 pollToken=0
