--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
        <artifactId>slf4j-api</artifactId>
        <version>1.7.5</version>
    </dependency>
+   
    <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-log4j12</artifactId>
@@ -78,6 +79,18 @@
     <artifactId>dropbox-core-sdk</artifactId>
     <version>2.1.1</version>
    </dependency>
+   
+   <dependency>
+      <groupId>org.apache.tika</groupId>
+      <artifactId>tika-parsers</artifactId>
+      <version>0.7</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>bcprov-jdk15</artifactId>
+          <groupId>org.bouncycastle</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
     
   </dependencies>
   
